Added search options menu and an option to disable images to save space

--- a/PoEHandbook/App.config
+++ b/PoEHandbook/App.config
@@ -16,6 +16,9 @@
             <setting name="WinSize" serializeAs="String">
                 <value>0, 0</value>
             </setting>
+            <setting name="ShowImages" serializeAs="String">
+                <value>True</value>
+            </setting>
         </PoEHandbook.Properties.Settings>
     </userSettings>
 </configuration>
