--- a/PoEHandbook/Properties/Settings.settings
+++ b/PoEHandbook/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="WinSize" Type="System.Drawing.Size" Scope="User">
       <Value Profile="(Default)">0, 0</Value>
     </Setting>
+    <Setting Name="ShowImages" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
