--- a/PoEHandbook/PoEHandbook.csproj
+++ b/PoEHandbook/PoEHandbook.csproj
@@ -71,14 +71,14 @@
     <Compile Include="Controls\SearchResult.xaml.cs">
       <DependentUpon>SearchResult.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Data\Alias.cs" />
     <Compile Include="Data\DataAccess.cs" />
     <Compile Include="Data\SearchResult.cs" />
+    <Compile Include="Ext.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Pages\EquippableInfoPage.xaml">
+    <Page Include="Pages\InfoPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -88,13 +88,28 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Armour.cs" />
+    <Compile Include="Model\Equipment.cs" />
+    <Compile Include="Model\Gem.cs" />
+    <Compile Include="Model\Interfaces\DescriptionHandler.cs" />
+    <Compile Include="Model\Interfaces\Handler.cs" />
+    <Compile Include="Model\Interfaces\IHasDescription.cs" />
+    <Compile Include="Model\Interfaces\IHasMods.cs" />
+    <Compile Include="Model\Interfaces\IHasRarity.cs" />
+    <Compile Include="Model\Interfaces\IHasRequirements.cs" />
+    <Compile Include="Model\Interfaces\IHasStats.cs" />
+    <Compile Include="Model\Interfaces\ModsHandler.cs" />
+    <Compile Include="Model\Interfaces\RarityHandler.cs" />
+    <Compile Include="Model\Interfaces\RequirementsHandler.cs" />
+    <Compile Include="Model\Interfaces\StatsHandler.cs" />
     <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\Ext.cs" />
-    <Compile Include="Model\Equippable.cs" />
+    <Compile Include="Model\Jewel.cs" />
+    <Compile Include="Model\Map.cs" />
+    <Compile Include="Model\Passive.cs" />
     <Compile Include="Model\Range.cs" />
-    <Compile Include="Pages\EquippableInfoPage.xaml.cs">
-      <DependentUpon>EquippableInfoPage.xaml</DependentUpon>
+    <Compile Include="Model\Recipe.cs" />
+    <Compile Include="Pages\InfoPage.xaml.cs">
+      <DependentUpon>InfoPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
