--- a/PoEHandbook/PoEHandbook.csproj
+++ b/PoEHandbook/PoEHandbook.csproj
@@ -164,6 +164,12 @@
   <ItemGroup>
     <Resource Include="Data\jewels.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Data\unique_amulets.xml" />
+    <Resource Include="Data\unique_belts.xml" />
+    <Resource Include="Data\unique_quivers.xml" />
+    <Resource Include="Data\unique_rings.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>XCOPY "$(ProjectDir)Data" "$(TargetDir)Data" /s /i /y</PostBuildEvent>
