--- a/PoEHandbook/PoEHandbook.csproj
+++ b/PoEHandbook/PoEHandbook.csproj
@@ -155,20 +155,20 @@
     <Resource Include="Data\unique_shields.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Data\maps.xml" />
     <Resource Include="Data\unique_body_armours.xml" />
     <Resource Include="Data\unique_boots.xml" />
     <Resource Include="Data\unique_gloves.xml" />
     <Resource Include="Data\unique_helmets.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Data\jewels.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Data\unique_amulets.xml" />
     <Resource Include="Data\unique_belts.xml" />
     <Resource Include="Data\unique_quivers.xml" />
     <Resource Include="Data\unique_rings.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Data\unique_jewels.xml" />
+    <Resource Include="Data\unique_maps.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
